@@ -83,8 +83,11 @@ s390-dasd (0.0.5) UNRELEASED; urgency=low
     - Added Korean translation (ko.po)
   * Håvard Korsvoll
     - Updated Norwegian, bokmål translation, (nb.po). From Axel Bojer
+  * Bastian Blank
+    - Use BACKUP.
+    - Restructurize to support backup.
 
- -- Christian Perrier <bubulle@debian.org>  Sun,  8 Feb 2004 20:26:33 +0100
+ -- Bastian Blank <waldi@debian.org>  Fri, 05 Mar 2004 14:00:34 +0100
 
 s390-dasd (0.0.4) unstable; urgency=low
 
